serverless functions successfully updated for get, put, delete, post

--- a/serverless.yml
+++ b/serverless.yml
@@ -6,7 +6,7 @@ provider:
 
 functions:
   tasks:
-    handler: handler.tasks
+    handler: tasks.handler
     events: 
       - http:
           path: tasks
